--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
   - title: "GitHub"
     url: https://github.com/calca
   - title: "Buy Me a Coffee"
-    url: https://www.buymeacoffee.com/calca
+    url: https://buymeacoffee.com/gianluigick
   - title: "Instagram"
-    url: https://www.instagram.com/calca
+    url: https://www.instagram.com/calca80
